<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_browse">

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.kyad.deal.bottom.BrowseFragment"
        android:label="@string/browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.kyad.deal.bottom.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_lists"
        android:name="com.kyad.deal.bottom.ListFragment"
        android:label="@string/lists"
        tools:layout="@layout/fragment_list" />
</navigation>