<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/primaryLite"
            android:elevation="3dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/admin_login"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="82dp"
                        android:layout_height="42dp"
                        android:gravity="center|start"
                        android:text="@string/username"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/input"
                        android:ems="10"
                        android:hint="@string/enter_username"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:paddingStart="10dp"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="82dp"
                        android:layout_height="40dp"
                        android:gravity="center|start"
                        android:text="@string/password"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/input"
                        android:ems="10"
                        android:hint="@string/enter_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingHorizontal="2dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/black" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="82dp"
                        android:layout_height="40dp"
                        android:gravity="center|start"
                        android:text="@string/security_code"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/code"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/input"
                        android:ems="10"
                        android:hint="@string/eg_10_2_digit"
                        android:importantForAutofill="no"
                        android:inputType="numberPassword"
                        android:paddingHorizontal="2dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/black" />
                </LinearLayout>
                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/submit" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
